[gd_scene load_steps=9 format=3 uid="uid://ckoiwe8aelbix"]

[ext_resource type="Script" path="res://dialog_graph_editor.gd" id="1_h20jw"]
[ext_resource type="PackedScene" uid="uid://coqs1rqlad2mp" path="res://addons/netengine5/net.bobbo.dialog-graph/preview_text_window/window.tscn" id="4_5klm4"]
[ext_resource type="Texture2D" uid="uid://b8rln1ao27me6" path="res://sprites/speaker.png" id="4_hpkj5"]
[ext_resource type="Script" path="res://addons/netengine5/net.bobbo.dialog-graph/dialog_preview.gd" id="4_senx6"]
[ext_resource type="Texture2D" uid="uid://c1useibvh446a" path="res://sprites/speaker_muted.png" id="5_3eoaw"]
[ext_resource type="PackedScene" uid="uid://bo807ocm0385q" path="res://dialog_runner/dialog_runner.tscn" id="5_s1w5y"]
[ext_resource type="Script" path="res://addons/netengine5/net.bobbo.dialog-graph/dialog_graph_edit.gd" id="8_e3uds"]
[ext_resource type="Script" path="res://right_click_menu.gd" id="8_nqsv5"]

[node name="DialogGraphEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h20jw")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2(-1152, -648)
script = ExtResource("8_e3uds")

[node name="TODO - Create knowledge junction resource, then a node for those" type="Node" parent="GraphEdit"]

[node name="RightClickMenu" type="PopupMenu" parent="." node_paths=PackedStringArray("graph_edit")]
size = Vector2i(28, 8)
submenu_popup_delay = 0.2
script = ExtResource("8_nqsv5")
graph_edit = NodePath("../GraphEdit")

[node name="DialogPreview" type="Control" parent="." node_paths=PackedStringArray("graph_editor")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -410.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 180.0
grow_horizontal = 0
script = ExtResource("4_senx6")
graph_editor = NodePath("..")

[node name="DialogRunner" parent="DialogPreview" node_paths=PackedStringArray("text_window") instance=ExtResource("5_s1w5y")]
text_window = NodePath("../DialogPreviewTextWindow")

[node name="DialogPreviewTextWindow" parent="DialogPreview" instance=ExtResource("4_5klm4")]
layout_mode = 1

[node name="ControlsContainer" type="HBoxContainer" parent="DialogPreview"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="MuteToggle" type="CheckButton" parent="DialogPreview/ControlsContainer"]
texture_filter = 1
layout_mode = 2
theme_override_icons/checked = ExtResource("4_hpkj5")
theme_override_icons/unchecked = ExtResource("5_3eoaw")
button_pressed = true

[connection signal="node_deselected" from="." to="DialogPreview" method="_on_dialog_graph_editor_node_deselected"]
[connection signal="node_selected" from="." to="DialogPreview" method="_on_dialog_graph_editor_node_selected"]
[connection signal="connection_from_empty" from="GraphEdit" to="RightClickMenu" method="_on_graph_edit_connection_from_empty"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="connection_to_empty" from="GraphEdit" to="RightClickMenu" method="_on_graph_edit_connection_to_empty"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="node_deselected" from="GraphEdit" to="." method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="popup_request" from="GraphEdit" to="RightClickMenu" method="_on_graph_edit_popup_request"]
[connection signal="spawn_node" from="RightClickMenu" to="." method="_on_add_node_spawn_node"]
[connection signal="spawn_node_from" from="RightClickMenu" to="." method="_on_right_click_menu_spawn_node_from"]
[connection signal="spawn_node_to" from="RightClickMenu" to="." method="_on_right_click_menu_spawn_node_to"]
[connection signal="toggled" from="DialogPreview/ControlsContainer/MuteToggle" to="." method="_on_mute_toggle_toggled"]
